Revert "Merge branch 'master' of https://github.com/JMRI/JMRI into rxtx-to-pjc"
This reverts commit e63fc9106fcca49a07c2af91f0685db42abe3f1c, reversing
changes made to 4849b8c5ace0c23fc16f0af42b2a70c22a7be5d4.